Feat: Implement real-time WebSocket chat with STOMP and database persistence
- Add bidirectional STOMP/WebSocket chat communication on /ws-chat endpoint
- Create Conversacion and Mensaje entities with JPA persistence
- Implement JWT authentication for STOMP connections via StompJwtChannelInterceptor
- Add ChatService for message persistence, unread counting, and participant lookup
- Create ChatController and ChatWebSocketController for REST and STOMP endpoints
- Add ConversacionRepository and MensajeRepository with custom queries
- Create ChatLauncher floating button component with global STOMP connection
- Implement InboxChat reusable component with compact and full-page layouts
- Add automatic message scroll-to-bottom and enter-to-send functionality
- Display unread message count badges on conversations
- Add WebSocketConfig for STOMP broker and message topics
- Configure CORS and security for WebSocket connections
- Add DTOs for chat data transfer: ChatMessageDTO, ChatConversationDTO, ChatNotificationDTO
- Implement chat notifications to users and conversation updates in real-time